--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -7,7 +7,20 @@ body {
     background: $main-color;
   }
   
-  * {
-    box-sizing: border-box;
-  }
-  
+* {
+  box-sizing: border-box;
+}
+
+.button {
+  background-color: rgba(255, 255, 255, .3);
+  border: none;
+  border-radius: 25px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: 'Muli', sans-serif;
+  height: 50px;
+  letter-spacing: 1px;
+  margin: 10px 0;
+}
